  * Safir Secerovic
    - Update Bosnian translation (bs.po).
  * h3li0s
    - Added Albanian translation (sq.po)
  * Eugen Meshcheryakov : added Ukrainian translation (uk.po)
  * Håvard Korsvoll
    - Updated Norwegian (Nynorsk) translation.
  * Changwoo Ryu
    - Added Korean translation (ko.po)
  * Håvard Korsvoll
    - Updated Norwegian, bokmål translation, (nb.po). From Axel Bojer

 -- Christian Perrier <bubulle@debian.org>  Sun,  8 Feb 2004 20:26:33 +0100

s390-dasd (0.0.4) unstable; urgency=low

  * Bastian Blank
    - fix Build-Depends (Closes: #175290)
    - explicit set values for format and format_unclean.
  * Petter Reinholdtsen
    - Added Norwegian Bokmål (nb.po) translations recieved from
      Bjørn Steensrud.
    - Added Norwegian Nynorsk (nn.po) translations recieved from
      Gaute Hvoslef Kvalnes.
    - Added cdebconf-dev to build-depends.
  * Alastair McKinstry
    - Move to Standards-Version 3.6.0, converting changelog to UTF-8

 -- Petter Reinholdtsen <pere@debian.org>  Fri, 21 Mar 2003 19:09:16 +0100

s390-dasd (0.0.3) unstable; urgency=low

  * Richard Hirst
    - rename debconf_input() to my_debconf_input() to avoid clashes with
      #defines in cdebconf/debconfclient.h
  * Bastian Blank
    - fix Installer-Menu-Item
    
 -- Bastian Blank <waldi@debian.org>  Sat, 14 Dec 2002 10:32:57 +0100

s390-dasd (0.0.2) unstable; urgency=low

  * Convert to po-debconf, set Build-Depends: debhelper (>= 4.1.13)
    to ensure that generated templates are right, and set output encoding
    to UTF-8.
  * Bastian Blank
    - add s390x to architectures
    - depend against s390-tools-udeb
    - use di_execlog
    - some bugfixes and updates
  * Martin Sjögren
    - Replace XBC with XB so our special control fields don't confuse the
      changes files.
  * André Luís Lopes
    - Add Brazilian Portuguese (pt_BR) s390-dasd
      template translation.

 -- Bastian Blank <waldi@debian.org>  Wed, 13 Nov 2002 18:00:16 +0100
